--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@types/aos": "^3.0.5",
+    "animate-css-grid": "^1.5.1",
     "aos": "^2.3.4",
     "framer-motion": "^10.16.4",
     "next": "latest",
