--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll-to-top": "^3.0.0",
     "react-spinners": "^0.13.8"
   },
