--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll-to-top": "^3.0.0",
