--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.11.0",
     "react-scroll-to-top": "^3.0.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "typewriter-effect": "^2.21.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "latest",
